2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add an even better testimonial from Dave
	Sill - Message-ID: <wx0d74734sb.fsf@sws5.ctd.ornl.gov>

	* config.ht (Links): Just link to the two sections.

	* config-server.ht (Links): Mention that you should add your own
	e-mail address to the whitelist to facilitate initial testing.
	Also suggest a minimal .procmailrc-tmda.

	(Links): Mention that "-" is also an acceptable value for
	Postfix's recipient_delimiter.
	
	(Postfix): Instruct the user to setup LOCAL_DELIVERY_AGENT before
	setting up .forward.

	* config.ht (Links): Emphasize the left sidebar.

	* features.ht (Links): Changed wording, third-party delivery agent
	is required for non-qmail.

	(Links): Emphasize Postfix.
