@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Oct 16 14:20:41 2001 -->
+<!-- Tue Oct 16 14:56:48 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -141,6 +141,11 @@ Author
 Read the <a href="config-server.html">Server Configuration</a>
 section, and then optionally 
 <a href="config-client.html">Client Configuration</a>.
+<br><br>
+
+If you are upgrading from an earlier release of TMDA, make sure to
+consult the <strong>UPGRADE</strong> file that came with your TMDA
+distribution.
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
