@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 15 17:47:30 2001 -->
+<!-- Tue Oct 16 16:05:38 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -150,6 +150,31 @@ installs.
 
 </pre></blockquote>
 </ol>
+
+<u>Installation from Linux RPMs</u><br><br>
+
+If you are running Linux, you may wish to install a TMDA package
+instead. Both a "binary" RPM for RedHat-7.x and source
+RPM are available.
+
+<br><br>
+<ul>
+<li>binary RPM:<br>
+<blockquote><pre>
+
+# rpm --upgrade tmda-0.01-1.noarch.rpm
+
+</pre></blockquote>
+
+<li>source SRPM:<br>
+<blockquote><pre>
+
+# rpm --rebuild tmda-0.01-1.src.rpm
+# rpm --upgrade /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
+
+</pre></blockquote>
+
+</ul>
 
 
 </TD><!-- end of body cell -->
