@@ -1,5 +1,7 @@
 2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* install.ht (Links): Add installation instructions for Linux RPMs.
+
 	* results.ht (Links): Add an even better testimonial from Dave
 	Sill - Message-ID: <wx0d74734sb.fsf@sws5.ctd.ornl.gov>
 
